# sihl-demo

./: .env  .gitignore  .parcelrc  CONTRIBUTING.md  LICENSE  Makefile  README.md  default.nix  demo.ml  demo.opam  dune  dune-project  launch.json  pizza.opam  pizza.opam.locked
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  postCreate.sh
.github/workflows/: ci.yml  format.yml
app/command/: command.ml  create_pizza.ml  dune
app/context/pizza/: dune  model.ml  pizza.ml  pizza.mli  repo.ml
app/job/: dune  job.ml
config/: mail.cfg
database/: dune  migration.ml  pizza.ml
docker/: Dockerfile
http/: dune  handler.ml  route.ml
public/: styles.css
resources/: styles.css
rest/: dune  rest.ml
routes/: api.ml  dune  global.ml  routes.ml  site.ml
run/: dune  run.ml
service/: dune  service.ml
test/: dune  test.ml
test/e2e/: service.ml  test.ml
test/pizza/: dune  test.ml
test/unit/: dune
web/handler/: auth.ml  customers.ml  dune  ingredients.ml  pizza.ml  pizzas.ml  rest.ml  welcome.ml
web/middleware/: authn.ml
web/view/: auth.ml  dune  example.ml  ingredient.ml  ingredients.ml  layout.ml  pizza.ml  pizzas.ml  welcome.ml
